New page + infrastructure [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2457,6 +2457,10 @@ div.page-report.acute-illness {
 
 }
 
+div.page-report.well-child {
+  background: unset;
+}
+
 div.page-case-management {
 
   .ui.segment.filters {
