--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -326,7 +326,7 @@ h1.ui.header.report {
 .ui.report.items > .item > .content .ui.header {
   font-size: 1.72rem;
   font-weight: 600;
-  color: #06b9ff;
+  color: $color-primary;
   margin-top: 10px;
 }
 
