--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2470,7 +2470,7 @@ div.page-report.well-child {
     text-transform: uppercase;
   }
 
-  .pane-content {
+  .patient-info {
     background: $color-white;
     display: flex;
     padding: 30px 40px;
@@ -2489,6 +2489,67 @@ div.page-report.well-child {
         font-size: 22px;
         font-weight: 300;
         margin-bottom: 5px;
+      }
+    }
+  }
+
+  .pane-content {
+    background: $color-white;
+
+    .entries-heading {
+      border-bottom: 1px solid $color-text;
+      color: $color-dark-gray;
+      display: flex;
+      font-size: 20px;
+      font-weight: 600;
+      padding: 15px 30px;
+      width: 100%;
+
+      .assesment {
+        width: 50%;
+      }
+
+      .date {
+        width: 35%;
+      }
+    }
+
+    .diagnosis-entry {
+      border-bottom: 1px solid $color-text;
+      color: $color-dark-gray;
+      display: flex;
+      font-size: 22px;
+      padding: 15px 30px;
+      width: 100%;
+
+      &:last-child {
+        border-bottom: none;
+      }
+
+      .assesment {
+        align-self: center;
+        text-align: left;
+        width: 50%;
+
+        p {
+          margin-bottom: 0;
+        }
+      }
+
+      .date {
+        align-self: center;
+        font-size: 20px;
+        text-align: left;
+        width: 35%;
+      }
+
+      .icon-forward {
+        align-self: center;
+        background: url(#{$img-path}icon-forward-blue.svg) center center no-repeat;
+        background-size: 45px 50px;
+        height: 50px;
+        margin-left: 20px;
+        width: 50px;
       }
     }
   }
