Styling fix for https://github.com/Gizra/ihangane/issues/2670#issuecomment-893419136 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -100,6 +100,17 @@
       display: flex;
     }
   }
+
+  .why-not {
+    margin-bottom: 30px;
+    margin-left: 20px;
+
+    .ui.checkbox.activity {
+      margin-bottom: 15px;
+      margin-top: 0;
+    }
+
+  }
 }
 
 @mixin recommendation-label {
