Styling fix for https://github.com/Gizra/ihangane/issues/2660#issuecomment-893427929 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1460,6 +1460,10 @@ div.page-activity.well-child {
 
       @include next-steps;
 
+      .ui.form {
+        min-height: 140px;
+      }
+
       .date {
         margin-bottom: 20px;
       }
