--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2630,6 +2630,31 @@ div.page-report.well-child {
         width: 20%;
       }
     }
+
+    .growth-charts {
+      margin-left: -30px;
+      margin-right: -30px;
+    }
+
+    .growth-photos {
+      padding: 0 30px;
+
+      .ui.cards .report.card {
+        margin: 0 7px 15px;
+        width: calc(16% - 10px);
+      }
+
+      .ui.cards .report.card .content {
+        background: $color-white;
+        color: $color-dark-gray;
+        text-transform: uppercase;
+        font-size: 17px;
+        font-weight: 500;
+        text-align: center;
+        line-height: 35px;
+        width: 100px;
+      }
+    }
   }
 
   .pane-action {
