--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2482,13 +2482,18 @@ div.page-report.well-child {
         color: $color-primary;
         font-size: 28px;
         font-weight: bold;
+        margin-bottom: 2px;
       }
 
       p {
         color: $color-text;
-        font-size: 22px;
+        font-size: 20px;
         font-weight: 300;
-        margin-bottom: 5px;
+        margin-bottom: 0;
+
+        .label {
+          font-weight: 600;
+        }
       }
     }
   }
