Add message for case when there's no entries to display

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2593,6 +2593,12 @@ div.page-report.well-child {
       }
     }
 
+    .entry.no-matches {
+      border-bottom: none;
+      display: block;
+      text-align: center;
+    }
+
     .entry.diagnosis {
 
       .assesment {
