--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2673,6 +2673,21 @@ div.page-report.well-child {
       }
     }
 
+    .entry.next-appointment {
+
+      .type {
+        width: 35%;
+      }
+
+      .location {
+        width: 40%;
+      }
+
+      .date {
+        width: 25%;
+      }
+    }
+
     .growth-charts {
       margin-bottom: 60px;
       margin-left: -30px;
