Code review fixes

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -48,7 +48,7 @@ svg.z-score {
 
   .neg-two-to-neg-three {
     opacity: 0.5;
-    fill: $color-yellow2;
+    fill: $color-light-orange;
   }
 
   .below-neg-three {
