Change color for 1 / -1 lines [ci skip]

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -48,7 +48,7 @@ svg.z-score {
 
   .neg-two-to-neg-three {
     opacity: 0.5;
-    fill: $color-yellow2;
+    fill: $color-orange-light;
   }
 
   .below-neg-three {
@@ -148,7 +148,7 @@ svg.z-score {
   }
 
   .one-line-new {
-    stroke: #E24301;
+    stroke: $color-orange-light;
     fill: none;
   }
 
