0 - 13 weeks charts [ci skip]

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -61,7 +61,7 @@ svg.z-score {
     fill: $color-green;
   }
 
-  .month-line {
+  .unit-breakdown-line {
     fill: none;
     stroke: #77787B;
     stroke-width: 0.8;
@@ -119,7 +119,7 @@ svg.z-score {
     font-size: 10px;
   }
 
-  .year-line {
+  .unit-line {
     fill: none;
     stroke: #77787B;
     stroke-width: 1.5;
