Fix for https://github.com/Gizra/ihangane/issues/2647#issuecomment-906215767 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1449,6 +1449,10 @@ div.page-activity.well-child {
 
       @include next-steps;
 
+      .helper {
+        font-style: italic;
+      }
+
       .date {
         margin-bottom: 20px;
       }
