--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2483,6 +2483,33 @@ div.page-report.acute-illness {
 
 }
 
+div.page-encounter.well-child,
+div.page-activity.well-child,
+div.page-report.well-child {
+
+  .details {
+    padding-left: 25px;
+
+    .ui.header {
+      color: $color-white;
+      font-size: 28px;
+      font-weight: bold;
+      margin-bottom: 2px;
+    }
+
+    p {
+      color: $color-white;
+      font-size: 20px;
+      font-weight: 500;
+      margin-bottom: 0;
+
+      .label {
+        font-weight: 600;
+      }
+    }
+  }
+}
+
 div.page-report.well-child {
   background: unset;
 
@@ -2502,24 +2529,14 @@ div.page-report.well-child {
     padding: 30px 40px;
 
     .details {
-      padding-left: 25px;
 
       .ui.header {
         color: $color-primary;
-        font-size: 28px;
-        font-weight: bold;
-        margin-bottom: 2px;
       }
 
       p {
         color: $color-text;
-        font-size: 20px;
         font-weight: 300;
-        margin-bottom: 0;
-
-        .label {
-          font-weight: 600;
-        }
       }
     }
   }
