--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2778,13 +2778,13 @@ div.page-report.well-child {
     }
 
     .growth-charts {
-      margin-bottom: 60px;
+      margin-bottom: 30px;
       margin-left: -30px;
       margin-right: -30px;
     }
 
     .growth-photos {
-      padding: 0 30px;
+      padding: 20px 30px;
 
       .ui.cards .report.card {
         margin: 0 7px 15px;
