Patient info pane [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2222,6 +2222,7 @@ div.page-participant.acute-illness {
   }
 }
 
+// @todo: remove?
 div.page-report.acute-illness {
   background: $color-lighter-gray;
   padding: 20px;
@@ -2479,6 +2480,7 @@ div.page-report.acute-illness {
 
 }
 
+div.page-report.acute-illness,
 div.page-report.well-child {
   background: unset;
 
