Post merge fix [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2457,6 +2457,7 @@ div.page-report.acute-illness {
 
 }
 
+div.page-report.acute-illness,
 div.page-encounter.well-child,
 div.page-activity.well-child,
 div.page-report.well-child {
