Fixes [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2430,10 +2430,9 @@ div.page-report.acute-illness {
     }
 
     div.actions {
-      margin: 0
+      margin: 20px 0 0 0;
     }
   }
-
 }
 
 div.page-report.acute-illness,
