Next steps pane [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -8,6 +8,10 @@
       color: $color-light-blue;
     }
 
+    span.in-days {
+      color: $color-velvet;
+    }
+
     span.date {
       font-style: italic;
     }
