Fixes for https://github.com/Gizra/ihangane/issues/2723#issuecomment-917639676 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2769,6 +2769,10 @@ div.page-report.well-child {
       }
     }
 
+    .growth-nutrition-signs {
+      border-bottom: 1px solid $color-text;
+    }
+
     .growth-charts {
       margin-bottom: 30px;
       margin-left: -30px;
