--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -2406,6 +2406,20 @@ input::placeholder {
   }
 }
 
+.icon-vaccination-overview {
+  .active &:after {
+    background-image: url(#{$img-path}icon-contributing-factors-white.svg);
+  }
+
+  .completed &:after {
+    background-image: url(#{$img-path}icon-contributing-factors-white.svg), url(#{$img-path}icon-completed-circle.svg);
+  }
+
+  &:after {
+    background-image: url(#{$img-path}icon-contributing-factors-gray.svg);
+  }
+}
+
 // Lists
 
 .ui.list {
