--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1021,7 +1021,7 @@ div.page-activity.acute-illness {
   }
 }
 
-// Prenatal Activity and Nutrition Activity pages
+// Prenatal, Nutrition and Home Visit activity pages
 div.page-activity.prenatal,
 div.page-activity.nutrition,
 div.page-activity.home-visit {
@@ -1420,6 +1420,12 @@ div.page-activity.home-visit {
           margin-top: 20px;
           width: 50%;
         }
+      }
+
+      .form.pregnancy-dating .chw-lmp {
+        font-size: 25px;
+        font-weight: 300;
+        margin-left: 40px;
       }
     }
   }
