Fix for point 3 from https://github.com/Gizra/ihangane/issues/2714#issuecomment-933381554 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2756,6 +2756,7 @@ div.page-report.well-child {
       white-space: nowrap;
 
       .milestone {
+        min-width: 120px;
         padding: 30px 0 20px;
         text-align: center;
 
