--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1033,8 +1033,10 @@ div.page-activity.acute-illness {
     }
 
     .separator {
+      color: $color-light-gray;
       margin: 30px 0;
       width: 100%;
+      border: 1px solid;
     }
 
     .days-present {
