Use new Vitals mode for Well Child

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1474,7 +1474,10 @@ div.page-activity.well-child {
         min-height: 140px;
 
         .separator {
+          color: $color-light-gray;
           margin: 30px 0;
+          width: 100%;
+          border: 1px solid;
         }
       }
 
