--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -909,6 +909,12 @@ div.page-activity.acute-illness {
       }
     }
 
+    .ui.form.laboratory.covid-testing .instructions {
+      font-size: 24px;
+      font-weight: 800;
+      margin-bottom: 40px;
+    }
+
     .label {
       margin-bottom: 5px;
     }
