Complete forms adjustments

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -871,6 +871,7 @@ div.page-activity.acute-illness {
 
     .ui.form.medication-distribution,
     .ui.form.send-to-hc,
+    .ui.form.isolation,
     .ui.form.health-education {
 
       h2 {
