--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -92,6 +92,15 @@
           background: url(#{$img-path}icon-capsule-blue.svg) center center no-repeat;
           background-size: 36px 50px;
         }
+
+        &.icon-house {
+          background: url(#{$img-path}icon-house.svg) center center no-repeat;
+          background-size: 36px 36px;
+          padding: 0 10px;
+          margin-right: 10px;
+          height: 36px;
+          width: 52px;
+        }
       }
     }
 
@@ -872,7 +881,8 @@ div.page-activity.acute-illness {
     .ui.form.medication-distribution,
     .ui.form.send-to-hc,
     .ui.form.isolation,
-    .ui.form.health-education {
+    .ui.form.health-education,
+    .ui.form.follow-up {
 
       h2 {
         text-transform: uppercase;
